Fix forge stats css, Shift passphrase text file

--- a/static/css/shift.css
+++ b/static/css/shift.css
@@ -16,3 +16,8 @@
     border: 2px solid #1cbdc8;
     background-color: #1cbdc8;
 }
+
+/* Fix forge stats floating */
+.info-panel-grey {overflow:hidden;}
+.info-panel .title, .info-panel.info-panel-grey .title {opacity:1;font-size:1em;}
+.info-panel-grey .plain-text {white-space:nowrap;}
